--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <html lang="en" ng-app="Todoro">
 <head>
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
-    <meta name="viewport" content="initial-scale=1"/>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 </head>
 <body layout="column">
@@ -28,9 +28,10 @@
 
         <md-content ng-show="todoSelected" layout="column" flex class="md-padding">
             <md-card ng-controller="CircleControl">
-                <md-card-content >
+                <md-card-content>
                     <h2 class="md-title">{{currentTask}}</h2>
-                    <div layout="row"layout-align="space-around">
+
+                    <div layout="row" layout-align="space-around">
                         <md-progress-circular ng-class="circleClass" md-mode="determinate"
                                               value="{{determinateValue}}">
                         </md-progress-circular>
@@ -47,16 +48,21 @@
 
 
     </div>
+</div>
+<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 
-    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-
-    <script type="text/javascript" src="bower_components/ngCordova/dist/ng-cordova.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-animate/angular-animate.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-aria/angular-aria.js"></script>
-    <script type="text/javascript" src="bower_components/angular-material/angular-material.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-touch/angular-touch.min.js"></script>
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="bower_components/ngCordova/dist/ng-cordova.min.js"></script>
+<script type="text/javascript" src="bower_components/angular-animate/angular-animate.min.js"></script>
+<script type="text/javascript" src="bower_components/angular-aria/angular-aria.js"></script>
+<script type="text/javascript" src="bower_components/angular-material/angular-material.min.js"></script>
+<script type="text/javascript" src="bower_components/angular-touch/angular-touch.min.js"></script>
+<script type="text/javascript" src="cordova.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript">
+    document.addEventListener("deviceready", function () {
+        $cordovaPlugin.someFunction().then(success, error);
+    }, false);
+</script>
 
 </body>
 </html>
