--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -1,33 +1,23 @@
-<html lang="en" ng-app="Todoro">
+<html id="appIndex" lang="en">
 <head>
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
-    <meta name="viewport" content="initial-scale=1"/>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Security-Policy"
+          content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
 </head>
 <body layout="column">
 <md-toolbar layout="row">
     <h1 class="md-toolbar-tools" layout-align-gt-sm="center">Todoro</h1>
+    <span flex></span>
+    <md-button class="md-icon-button" aria-label="More">
+        <md-icon md-svg-icon="img/icons/more_vert.svg"></md-icon>
+    </md-button>
 </md-toolbar>
+
 <div layout="row" flex>
     <div ng-controller="TodoListControl" layout="column" flex id="content">
-        <md-content style="height: 600px;">
-            <md-card ng-show="todoSelected" ng-controller="CircleControl">
-                <md-card-content >
-                    <h2 class="md-title">{{currentTask}}</h2>
-                    <div layout="row"layout-align="space-around">
-                        <md-progress-circular ng-class="circleClass" md-mode="determinate"
-                                              value="{{determinateValue}}">
-                        </md-progress-circular>
-                        <div>{{timeLeft}}</div>
-                    </div>
-
-                </md-card-content>
-                <div class="md-actions" layout="row" layout-align="end center">
-
-                    <md-button data-ng-click="startTimer()">{{startButtonText}}</md-button>
-                </div>
-            </md-card>
-
+        <md-content ng-hide="todoSelected" style="height: 600px;">
             <md-list>
                 <md-list-item class="md-3-line" ng-click="chooseTask(item)" ng-repeat="item in todos">
                     <div class="md-list-item-text">
@@ -44,20 +34,42 @@
         </md-content>
 
         <md-content ng-show="todoSelected" layout="column" flex class="md-padding">
+            <md-card ng-controller="CircleControl">
+                <md-card-content>
+                    <h2 class="md-title">{{currentTask}}</h2>
+
+                    <div layout="row" layout-align="space-around">
+                        <md-progress-circular ng-class="circleClass" md-mode="determinate"
+                                              value="{{determinateValue}}">
+                        </md-progress-circular>
+                        <div>{{timeLeft}}</div>
+                    </div>
+
+                </md-card-content>
+                <div class="md-actions" layout="row" layout-align="end center">
+
+                    <md-button data-ng-click="startTimer()">{{startButtonText}}</md-button>
+                </div>
+            </md-card>
         </md-content>
 
 
     </div>
+</div>
 
-    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 
-    <script type="text/javascript" src="bower_components/ngCordova/dist/ng-cordova.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-animate/angular-animate.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-aria/angular-aria.js"></script>
-    <script type="text/javascript" src="bower_components/angular-material/angular-material.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-touch/angular-touch.min.js"></script>
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="bower_components/ngCordova/dist/ng-cordova.min.js"></script>
+<script type="text/javascript" src="bower_components/angular-animate/angular-animate.min.js"></script>
+<script type="text/javascript" src="bower_components/angular-aria/angular-aria.js"></script>
+<script type="text/javascript" src="bower_components/angular-material/angular-material.min.js"></script>
+<script type="text/javascript" src="bower_components/angular-touch/angular-touch.min.js"></script>
+<script type="text/javascript" src="cordova.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript">
+    document.addEventListener("deviceready", onDeviceReady, false);
+
+</script>
 
 </body>
 </html>
